--- a/themes/PaperMod/layouts/partials/footer.html
+++ b/themes/PaperMod/layouts/partials/footer.html
@@ -178,5 +178,20 @@
         });
     });
 </script>
+<script src="https://giscus.app/client.js"
+        data-repo="payne4handsome/payne4handsome.github.io"
+        data-repo-id="R_kgDOJl8oOQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOJl8oOc4Cf4UD"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</script>
 
 {{- end }}
